--- a/_posts/BI-5020/2017-02-11-EnergyPlus-35528b943f257260a8c9c16273dd55ba392bdab2-x86_64-MacOS-10.9-clang-results.html
+++ b/_posts/BI-5020/2017-02-11-EnergyPlus-35528b943f257260a8c9c16273dd55ba392bdab2-x86_64-MacOS-10.9-clang-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-35528b943f257260a8c9c16273dd55ba392bdab2-x86_64-MacOS-10.9-cla
 permalink: EnergyPlus-35528b943f257260a8c9c16273dd55ba392bdab2-x86_64-MacOS-10.9-clang.html
 tags: data
 layout: ci_results
-date: '2017-02-11 00:20:35'
+date: '2017-02-11 00:21:44'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -24,15 +24,15 @@ package_name:
 tag_name: 
 commit_sha: 35528b943f257260a8c9c16273dd55ba392bdab2
 branch_name: BugIssue_5020
-test_run: false
+test_run: true
 pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-MacOS-10.9-clang
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 5.0e-06
+test_time: 2.0127439999999996
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-35528b943f257260a8c9c16273dd55ba392bdab2-x86_64-MacOS-10.9-clang.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-02-11 00:20:35",
+    "date": "2017-02-11 00:21:44",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -90,15 +90,15 @@ performance_test_count: 0
     "tag_name": null,
     "commit_sha": "35528b943f257260a8c9c16273dd55ba392bdab2",
     "branch_name": "BugIssue_5020",
-    "test_run": false,
+    "test_run": true,
     "pull_request_issue_id": "",
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-MacOS-10.9-clang",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 5.0e-06,
+    "test_time": 2.0127439999999996,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
