--- a/_posts/patch-1/2017-02-11-EnergyPlus-bfaf45db4e0cffc4d85384499dc19286faf82e15-PR5865-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61-results.html
+++ b/_posts/patch-1/2017-02-11-EnergyPlus-bfaf45db4e0cffc4d85384499dc19286faf82e15-PR5865-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-bfaf45db4e0cffc4d85384499dc19286faf82e15-PR5865-x86_64-Linux-U
 permalink: EnergyPlus-bfaf45db4e0cffc4d85384499dc19286faf82e15-PR5865-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61.html
 tags: data
 layout: ci_results
-date: '2017-02-11 21:20:05'
+date: '2017-02-11 21:24:26'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: '5865'
 pull_request_base_repository: NREL/EnergyPlus
 pull_request_base_ref: develop
 device_id: x86_64-Linux-Ubuntu-14.04-cppcheck-1.61
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 207.609226082
 test_time: 
 package_time: 
 install_time: 
@@ -71,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-bfaf45db4e0cffc4d85384499dc19286faf82e15-PR5865-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-02-11 21:20:05",
+    "date": "2017-02-11 21:24:26",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -97,9 +97,9 @@ performance_test_count: 0
     "pull_request_base_repository": "NREL/EnergyPlus",
     "pull_request_base_ref": "develop",
     "device_id": "x86_64-Linux-Ubuntu-14.04-cppcheck-1.61",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 207.609226082,
     "test_time": null,
     "package_time": null,
     "install_time": null,
