--- a/_posts/137612401-I-5655/2017-02-12-EnergyPlus-c43494428e8b6b4405ef1a7d22826bff32828964-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
+++ b/_posts/137612401-I-5655/2017-02-12-EnergyPlus-c43494428e8b6b4405ef1a7d22826bff32828964-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-c43494428e8b6b4405ef1a7d22826bff32828964-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-c43494428e8b6b4405ef1a7d22826bff32828964-x86_64-Linux-Ubuntu-14.04-custom_check.html
 tags: data
 layout: ci_results
-date: '2017-02-12 04:03:47'
+date: '2017-02-12 04:04:43'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-custom_check
-pending: true
+pending: false
 analyze_only: true
-build_time: 
-test_time: 
+build_time: 1.096396696
+test_time: 1.012889357
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -71,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-c43494428e8b6b4405ef1a7d22826bff32828964-x86_64-Linux-Ubuntu-14.04-custom_check.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-02-12 04:03:47",
+    "date": "2017-02-12 04:04:43",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -97,10 +97,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-custom_check",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 1.096396696,
+    "test_time": 1.012889357,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
